Worked on Chamber home page. Added navigation, fixed css on mobile views.

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 620px) {
 
     /* hide hamburger button */
     #menu {
